--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ nav{
     border: none;
     height: 1.8rem;
     width: 1.8rem;
-    background-image:url(/images/apps.png);
+    background-image:url("./images/apps.png");
     background-size: contain;
     background-position: center;
     background-color: transparent;
@@ -79,7 +79,7 @@ nav{
     width: 1rem;
     margin-left: 0.5rem;
     margin-right: 1rem;
-    background-image:url(/images/search.png);
+    background-image:url("./images/search.png");
     background-size: contain;
     background-position: center;
     background-color: transparent;
@@ -90,7 +90,7 @@ nav{
     border: none;
     height: 1.5rem;
     width: 1.5rem;
-    background-image:url(/images/keyboard.png);
+    background-image:url("./images/keyboard.png");
     background-size: contain;
     background-position: center;
     background-color: transparent;
